2008-10-13  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_ipt.cpp (PolicyCompiler_ipt::compile): fixed
	bug (no #): policy compiler for iptables would crash with
	assertion when AddressTable or DNSName object was used in a rule
	in pure mangle table ruleset. This could be related to crash
	reported in bug #2157121.

2008-10-11  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_ipt.cpp (finalizeChain::processNext): Always
	placing rules with action "Accept" in table mangle in chain
	PREROUTING

	* RuleSetDialog.cpp (RuleSetDialog::loadFWObject): Added attribute
	to the Policy object for iptables to indicate that this policy
	ruleset should be compiled into filter and mangle tables or only
	for the mangle table. This makes sense (and is only shown) for
	iptables firewalls. By default the attribute is set to
	"filter+mangle" which means compiler will try to figure out which
	table each rule should go to. However some combinations of service
	objects and actions are ambiguous and can be used in both filter
	and mangle tables. In cases like these, user can help by creating
	separate Policy ruleset that will be translated only into iptables
	rules in the mangle table.

	* PolicyCompiler_ipt.cpp (singleSrvNegation::processNext): fixed
	bug #2148378: "Negation does not work on Tag Service". Policy
	compiler for iptables should be able to use "!"  single-object
	negation for TagService obejcts

	* ObjectTreeView.cpp (ObjectTreeView::updateTreeItems): fixed bug
	#2149503: ever since attribute "read-only" of FWObject has been
	converted from a dictionary entry to a member variable, the GUI
	could not properly check if an object is read-only and could not
	update context menu and icon in the object tree. This lead to
	unstable behavior when an object was set read-only because the GUI
	could not show corresponding icon to indicate its status change,
	did not switch context menu items and permitted operations that
	should not have been permitted.
